processor/src/test/resources/errors/AbstractActivity.java
package errors;

import android.app.Activity;

import com.kboyarshinov.activityscreens.annotation.ActivityScreen;

@ActivityScreen
public abstract class AbstractActivity extends Activity {
}